--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>Run - Strava Team Tracking</title>
+    <meta name="description" content="Run - Strava Team Tracking">
+
+    <link rel="stylesheet" href="css/styles.css">
+
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
