--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="description" content="Run - Strava Team Tracking">
 
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-default.css" />
+    <script src="http://github.hubspot.com/odometer/odometer.js"></script>
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-    <p>Hello, world!</p>
+    <div id="odometer" class="odometer">123</div>
   </body>
 </html>
