Play with fonts

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Run - Strava Team Tracking</title>
     <meta name="description" content="Run - Strava Team Tracking">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-default.css" />
+    <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-default.css">
     <script src="http://github.hubspot.com/odometer/odometer.js"></script>
 
     <!--[if lt IE 9]>
@@ -15,6 +16,7 @@
     <![endif]-->
   </head>
   <body>
-    <div id="odometer" class="odometer">123</div>
+    <div id="odometer" class="odometer">123.45</div>
+    <div id="tag" class="tag">mi run this year</div>
   </body>
 </html>
