--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Run - Strava Team Tracking</title>
     <meta name="description" content="Run - Strava Team Tracking">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300" type="text/css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-default.css">
     <script src="http://github.hubspot.com/odometer/odometer.js"></script>
