Add awesome Strava colors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <div id="odometer" class="odometer">123.45</div>
-    <div id="tag" class="tag">mi run this year</div>
+    <div id="tag" class="tag">miles run this year</div>
   </body>
 </html>
